## Upcoming release
- Remove closeAndReadBytes(), flushFS(), and convert close() to a no-op.
- Set up CI and automatic releases via GitHub Actions
- Package updates to resolve security alerts
- Validate that parameters to `warp()` and `convert()` are strings
- Add CHANGELOG, PR template

## 1.0.0-alpha.10 (2019-02-13)
- Add `reproject()` utility function