@@ -68,18 +68,4 @@ export class GDALDataset {
             resolve([]);
         });
     }
-
-    rasterize(args) {
-        return callWorker('GDALRasterize', [this.datasetPtr, args]).then(
-            function (result) {
-                return new GDALDataset(
-                    result.datasetPtr,
-                    result.filePath,
-                    result.directory,
-                    result.filename
-                );
-            },
-            function (error) { throw error; }
-        );
-    }
 }
