@@ -1,4 +1,5 @@
 ## Upcoming release
+- Add loam.rasterize() wrapper for GDALRasterize()
 - Remove closeAndReadBytes(), flushFS(), and convert close() to a no-op.
 - Set up CI and automatic releases via GitHub Actions
 - Package updates to resolve security alerts
